# decision-brief

./: .env.example  .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.en.md  README.md  SECURITY.md  SKILL.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: README.md  config.py  db.py  main.py  requirements.txt
backend/models/: schemas.py
backend/routes/: archive.py  chat.py  config_api.py  decision.py  modes.py  stats.py  tts.py
backend/services/: bazi_engine.py  decision_score.py  llm_service.py  mode_recognizer.py  modes_data.py  nature_service.py  nature_signal.py  prompts.py  weather_service.py
docs/: index-en.html  index.html
frontend/: index.html
frontend/scripts/: api.js  app.js  archive.js  brief.js  chat.js  i18n.js  settings.js  stats.js  voice.js
frontend/styles/: archive.css  chat.css  desktop.css  main.css  settings.css  stats.css
scripts/: choice_assistant.py
tests/: conftest.py  test_config.py  test_db.py  test_desktop_ui.py  test_integration.py  test_routes.py  test_services.py
